# Foxmark

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
scripts/: fetch-pdfium.sh  generate-icons.mjs
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  export.rs  files.rs  lib.rs  main.rs  markdown.rs  pdf.rs
src/components/: CommandPalette.ts  DocumentView.ts  ExportDialog.ts  PdfViewer.ts  Sidebar.ts  TabBar.ts  Toast.ts  Welcome.ts  icons.ts
src/editor/: autocomplete.ts  markdown-commands.ts  setup.ts
src/lib/: ipc.ts  paths.ts  state.ts
src/styles/: command-palette.css  dialogs.css  editor.css  firefox-proton.css  pdf-viewer.css  preview.css  sidebar.css  splash.css  tabs.css  theme.css  toasts.css  welcome.css
src/styles/export/: github-default.css
